--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
       <!-- styleseets -->
       <link rel="stylesheet" href="./style.css">
       <!-- font awesome CDN -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesomeawesome/7.0.1/css/all.min.css"
-            integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
       <!-- tailwind && daisyui -->
       <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
       <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -24,7 +22,61 @@
 </head>
 
 <body>
-
+      <header>
+            <nav>
+                  <div class="navbar bg-base-100 shadow-sm">
+                        <div class="navbar-start">
+                              <div class="dropdown">
+                                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                                          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none"
+                                                viewBox="0 0 24 24" stroke="currentColor">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                      d="M4 6h16M4 12h8m-8 6h16" />
+                                          </svg>
+                                    </div>
+                                    <ul tabindex="0"
+                                          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                                          <li><a>Item 1</a></li>
+                                          <li>
+                                                <a>Parent</a>
+                                                <ul class="p-2">
+                                                      <li><a>Submenu 1</a></li>
+                                                      <li><a>Submenu 2</a></li>
+                                                </ul>
+                                          </li>
+                                          <li><a>Item 3</a></li>
+                                    </ul>
+                              </div>
+                              <a class="flex items-center gap-1">
+                                    <span class="text-lg font-bold">English</span>
+                                    <img src="./assets/logo.png" alt="">
+                                    <span class="text-lg font-bold">জানালা</span>
+                              </a>
+                        </div>
+                        <div class="navbar-end hidden lg:flex border border-black">
+                              <ul class="menu menu-horizontal px-1 space-x-4">
+                                    <li class="border border-red-500">
+                                          <a class="btn btn-outline btn-primary" href=""><i
+                                                      class="fa-solid fa-circle-question"></i>FAQ</a>
+                                    </li>
+                                    <li class="border border-red-500">
+                                          <a class="btn btn-outline btn-primary" href=""><i
+                                                      class="fa-solid fa-book-open"></i>Learn</a>
+                                    </li>
+                                    <li class="border border-red-500">
+                                          <a class="btn btn-outline btn-primary" href=""><i
+                                                      class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a>
+                                    </li>
+                              </ul>
+                        </div>
+                        <div class="">
+                              <a class="btn">Button</a>
+                        </div>
+                  </div>
+            </nav>
+      </header>
+      <main></main>
+      <footer></footer>
 </body>
 
 </html>
