navber section is done

--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@
                                     </div>
                                     <ul tabindex="0"
                                           class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-                                          <li><a>Item 1</a></li>
-                                          <li>
-                                                <a>Parent</a>
-                                                <ul class="p-2">
-                                                      <li><a>Submenu 1</a></li>
-                                                      <li><a>Submenu 2</a></li>
-                                                </ul>
+                                          <li class="">
+                                                <a class="" href=""><i class="fa-solid fa-circle-question"></i>FAQ</a>
                                           </li>
-                                          <li><a>Item 3</a></li>
+                                          <li class="">
+                                                <a class="" href=""><i class="fa-solid fa-book-open"></i>Learn</a>
+                                          </li>
+                                          <li class="">
+                                                <a class="" href=""><i
+                                                            class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a>
+                                          </li>
                                     </ul>
                               </div>
                               <a class="flex items-center gap-1">
@@ -53,27 +54,25 @@
                                     <span class="text-lg font-bold">জানালা</span>
                               </a>
                         </div>
-                        <div class="navbar-end hidden lg:flex border border-black">
+                        <div class="navbar-end hidden lg:flex ">
                               <ul class="menu menu-horizontal px-1 space-x-4">
-                                    <li class="border border-red-500">
+                                    <li class="">
                                           <a class="btn btn-outline btn-primary" href=""><i
                                                       class="fa-solid fa-circle-question"></i>FAQ</a>
                                     </li>
-                                    <li class="border border-red-500">
+                                    <li class="">
                                           <a class="btn btn-outline btn-primary" href=""><i
                                                       class="fa-solid fa-book-open"></i>Learn</a>
                                     </li>
-                                    <li class="border border-red-500">
+                                    <li class="">
                                           <a class="btn btn-outline btn-primary" href=""><i
                                                       class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a>
                                     </li>
                               </ul>
                         </div>
-                        <div class="">
-                              <a class="btn">Button</a>
-                        </div>
                   </div>
             </nav>
+
       </header>
       <main></main>
       <footer></footer>
