--- a/index.html
+++ b/index.html
@@ -23,59 +23,79 @@
 
 <body>
       <header>
-            <nav>
-                  <div class="navbar bg-base-100 shadow-sm">
-                        <div class="navbar-start">
-                              <div class="dropdown">
-                                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                                          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none"
-                                                viewBox="0 0 24 24" stroke="currentColor">
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                      d="M4 6h16M4 12h8m-8 6h16" />
-                                          </svg>
-                                    </div>
-                                    <ul tabindex="0"
-                                          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-                                          <li class="">
-                                                <a class="" href=""><i class="fa-solid fa-circle-question"></i>FAQ</a>
-                                          </li>
-                                          <li class="">
-                                                <a class="" href=""><i class="fa-solid fa-book-open"></i>Learn</a>
-                                          </li>
-                                          <li class="">
-                                                <a class="" href=""><i
-                                                            class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a>
-                                          </li>
-                                    </ul>
+            <nav class="navbar bg-base-100 shadow-sm">
+                  <div class="navbar-start">
+                        <div class="dropdown">
+                              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none"
+                                          viewBox="0 0 24 24" stroke="currentColor">
+                                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M4 6h16M4 12h8m-8 6h16" />
+                                    </svg>
                               </div>
-                              <a class="flex items-center gap-1">
-                                    <span class="text-lg font-bold">English</span>
-                                    <img src="./assets/logo.png" alt="">
-                                    <span class="text-lg font-bold">জানালা</span>
-                              </a>
-                        </div>
-                        <div class="navbar-end hidden lg:flex ">
-                              <ul class="menu menu-horizontal px-1 space-x-4">
+                              <ul tabindex="0"
+                                    class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
                                     <li class="">
-                                          <a class="btn btn-outline btn-primary" href=""><i
-                                                      class="fa-solid fa-circle-question"></i>FAQ</a>
+                                          <a class="" href=""><i class="fa-solid fa-circle-question"></i>FAQ</a>
                                     </li>
                                     <li class="">
-                                          <a class="btn btn-outline btn-primary" href=""><i
-                                                      class="fa-solid fa-book-open"></i>Learn</a>
+                                          <a class="" href=""><i class="fa-solid fa-book-open"></i>Learn</a>
                                     </li>
                                     <li class="">
-                                          <a class="btn btn-outline btn-primary" href=""><i
+                                          <a class="" href=""><i
                                                       class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a>
                                     </li>
                               </ul>
                         </div>
+                        <a class="flex items-center gap-1">
+                              <span class="text-lg font-bold">English</span>
+                              <img src="./assets/logo.png" alt="">
+                              <span class="text-lg font-bold">জানালা</span>
+                        </a>
+                  </div>
+                  <div class="navbar-end hidden lg:flex ">
+                        <ul class="menu menu-horizontal px-1 space-x-4">
+                              <li class="">
+                                    <a class="btn btn-outline btn-primary" href=""><i
+                                                class="fa-solid fa-circle-question"></i>FAQ</a>
+                              </li>
+                              <li class="">
+                                    <a class="btn btn-outline btn-primary" href=""><i
+                                                class="fa-solid fa-book-open"></i>Learn</a>
+                              </li>
+                              <li class="">
+                                    <a class="btn btn-outline btn-primary" href=""><i
+                                                class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a>
+                              </li>
+                        </ul>
                   </div>
             </nav>
-
       </header>
-      <main></main>
+      <main>
+            <!-- banner section -->
+            <section class="flex flex-col-reverse md:flex-row justify-between items-center w-11/12 mx-auto">
+                  <div class="banner-contant flex-1 text-center md:text-left">
+                        <h1 class="text-4xl font-bold mb-8"><span class="text-sky-400">English</span> is Easy !!</h1>
+                        <p class="font-bengali">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার
+                              দক্ষতা
+                              বাড়াতে চান,
+                              আমাদের Interactive Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ</p>
+                  </div>
+                  <div class="banner-img flex-1">
+                        <img src="./assets/hero-student.png" alt="">
+                  </div>
+            </section>
+
+            <section>
+                  <h1 class="text-4xl font-bold mb-8 text-center"><span class="text-sky-400">Let's</span>learn
+                        vocabulary</h1>
+                  <div id="level-container" class="flex gap-5 flex-wrap justify-center"></div>
+
+            </section>
+
+      </main>
       <footer></footer>
+      <script src="./script/index.js"></script>
 </body>
 
 </html>
