--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -90,7 +91,14 @@
                   <h1 class="text-4xl font-bold mb-8 text-center"><span class="text-sky-400">Let's</span>learn
                         vocabulary</h1>
                   <div id="level-container" class="flex gap-5 flex-wrap justify-center"></div>
+            </section>
+            <section id="word-container" class="bg-gray-200 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5">
+                  <div class=" bg-white rounded-xl text-center shadow-sm py-10 px-5">
+                        <h1>Eager</h1>
+                        <p>Meaning /Pronounciation</p>
+                        <div>"আগ্রহী / ইগার"</div>
 
+                  </div>
             </section>
 
       </main>
