--- a/index.html
+++ b/index.html
@@ -93,11 +93,13 @@
                   <div id="level-container" class="flex gap-5 flex-wrap justify-center"></div>
             </section>
             <section id="word-container" class="bg-gray-200 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5">
-                  <div class=" bg-white rounded-xl text-center shadow-sm py-10 px-5">
-                        <h1>Eager</h1>
-                        <p>Meaning /Pronounciation</p>
-                        <div>"আগ্রহী / ইগার"</div>
 
+
+
+                  <div class="text-center col-span-full rounded-xl space-y-6 bg-sky-100 font-bengali">
+
+                        <p class="text-xl font-medium text-gray-400 ">আপনি এখনো কোন Lesson Select করেন নি</p>
+                        <h1 class="text-4xl font-bold">একটি Lesson Select করুন।</h1>
                   </div>
             </section>
 
